# Findex

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  database.rs  main.rs  models.rs  scanner.rs  search.rs
