[package]
name = "indexer"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "=1.35.1", features = ["full"] }
walkdir = "=2.4.0"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
clap = { version = "=4.4.18", features = ["derive", "color"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
anyhow = "=1.0.79"
chrono = { version = "=0.4.31", features = ["serde"] }
colored = "=2.1.0"
indicatif = "=0.17.7"
humansize = "=2.1.3"
dirs = "=5.0.1"
